--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "~1.0",
         "propaganistas/laravel-intl": "^2.1",
         "propaganistas/laravel-phone": "^4.0",
+        "spatie/laravel-schemaless-attributes": "^1.3",
         "spomky-labs/otphp": "^9.1",
         "telerivet/telerivet-php-client": "^1.1"
     },
