--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "propaganistas/laravel-intl": "^2.1",
         "propaganistas/laravel-phone": "^4.0",
         "spatie/geocoder": "^3.3",
+        "spatie/laravel-permission": "^2.26",
         "spatie/laravel-schemaless-attributes": "^1.3",
         "spomky-labs/otphp": "^9.1",
         "telerivet/telerivet-php-client": "^1.1"
