--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         "symfony/thanks": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "classmap": [
             "database",
             "vendor/telerivet/telerivet-php-client/telerivet.php"
