add Tagable Pivot

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "botman/driver-web": "~1.0",
         "botman/studio-addons": "~1.4.1",
         "botman/tinker": "~1.0",
+        "chelout/laravel-relationship-events": "^0.6.2",
         "fideloper/proxy": "~4.0",
+        "iatstuti/laravel-cascade-soft-deletes": "^1.5",
         "kalnoy/nestedset": "^4.3",
         "laravel-notification-channels/twilio": "^2.0",
         "laravel/framework": "5.6.*",
